# illoominate

./: .gitignore  Cargo.toml  README.md  nbr.py  pyproject.toml  python bindings nbr.ipynb  python bindings sbr.ipynb  python bindings sustainable.ipynb  python bindings.ipynb  python bindings.py  requirements.txt  sbr.py
.github/workflows/: CI.yml
benches/: benchmark_leave_one_out.rs  benchmark_shapley.rs
data/instacart/processed/: config.toml  test.csv  train.csv  valid.csv
data/nbr_test/processed/: baskets.csv  config.toml
data/nowplaying1m/processed/: config.toml  data_loo_values.csv  test.csv  valid.csv
data/rsc15_100k/processed/: sustainable.csv  train.csv  valid.csv
data/sample/: config.toml  test.csv  train.csv
data/sbr_test/processed/: test.csv  train.csv
data/tafeng/processed/: baskets.csv  config.toml  data_loo_values.csv  data_shapley_values.csv  train.csv  valid.csv
docs/experiments/: kmc_shapley_vs_longest.md
notebooks/: mrr_removal_curve_data.csv  removal_session_length.ipynb  sbr_removal_impact.ipynb  session_analysis.ipynb  session_analysis.py  shapley_values.csv
python/illoominate/: __init__.py
src/: lib.rs  utils.rs
src/baselines/: k_mc_shapley.rs  k_mc_shapley_aggregate.rs  loo.rs  mcshapley_sparse.rs  mod.rs  tmcshapley.rs
src/conf/: illoominateconfig.rs  mod.rs
src/importance/: candidate_neighbors.rs  k_loo.rs  k_mc_shapley.rs  mc_utils.rs  mod.rs  tmc_utils.rs
src/metrics/: f1metric.rs  hitrate.rs  mod.rs  mrr.rs  ndcg.rs  precision.rs  product_info.rs  recall.rs  st.rs  sustainable_mrr.rs  sustainable_ndcg.rs
src/nbr/: mod.rs  removal_impact.rs  types.rs
src/nbr/caboose/: mod.rs  row_accumulator.rs  serialize.rs  similarity.rs  sparse_topk_index.rs  topk.rs  types.rs
src/nbr/tifuknn/: hyperparams.rs  io.rs  mod.rs  types.rs
src/sessrec/: io.rs  mod.rs  removal_impact.rs  types.rs
src/sessrec/metrics/: f1metric.rs  hitrate.rs  mod.rs  mrr.rs  ndcg.rs  precision.rs  recall.rs  responsible_mrr.rs  st.rs  sustainabilityratio.rs  sustainable_mrr.rs  sustainable_ndcg.rs
src/sessrec/vmisknn/: mod.rs  topk.rs
tests/unit_tests/: mod.rs
