[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "illoominate"
version = "0.9.3"
description = "A scalable library designed to compute data importance scores for interaction data in sequential kNN-based recommender systems."
readme = "README.md"
#license = "Apache-2.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [
    {name = "Barrie Kersbergen", email = "kersbergenb@gmail.com"},
]
maintainers = [
    {name = "Barrie Kersbergen", email = "kersbergenb@gmail.com"},
]
requires-python = ">=3.10"
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
